--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@
 
 <head>
   <meta charset="UTF-8" />
-  <link rel="icon" href="/favicon.ico" />
+  <link rel="icon" href="./favicon.ico" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.0.0/animate.compat.css" /> -->
-  <link rel="stylesheet" href="/asset/ep/lib/theme-chalk/index.css">
+  <link rel="stylesheet" href="./asset/ep/lib/theme-chalk/index.css">
   <!-- <script src="http://code.jquery.com/jquery-1.10.0.min.js"></script> -->
   <title>景升控股集团</title>
-  <script type="module" crossorigin src="/static/index.eaf967b7.js"></script>
-  <link rel="stylesheet" href="/static/style.d2b0ecda.css">
+  <script type="module" crossorigin src="./static/index.a20a81be.js"></script>
+  <link rel="stylesheet" href="./static/style.1dca6740.css">
 </head>
 
 <body>
